src/objects/Opportunity_Group__c.object
<CustomObject>
    <description>Junction Object - To associate several deals to one opportunity.</description>
    <fields>
        <fullName>Deal__c</fullName>
        <description>Req 4556: Junction Object: Opportunity Group</description>
        <inlineHelpText>It is not permitted to associate two Framed Deals or two Upsell Deals with the same Opportunity. The combination of Framed Deal and Upsell Deal is only allowed for Master Opportunities.</inlineHelpText>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal-Opportunity Grouping</relationshipLabel>
        <relationshipName>Opportunity_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Relation__c</fullName>
        <description>Req 4556: Junction Object: Opportunity Group</description>
        <label>Opportunity Relation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Subordinate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Req 4556: Junction Object: Opportunity Group</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Deals can only be related to Direct or Indirect Opportunities that are not closed or submitted for approval.</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>Create Direct Sales Opportunity</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>Create Indirect Sales Opportunity</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Data Loader Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal-Opportunity Grouping</relationshipLabel>
        <relationshipName>Opportunity_Groups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unweighted_Value_in_EUR__c</fullName>
        <description>Req 4556: Junction Object: Opportunity Group</description>
        <label>Unweighted Value in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deal-Opportunity Grouping</label>
    <nameField>
        <displayFormat>G-{0}</displayFormat>
        <label>Opportunity Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal-Opportunity Grouping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LockOpptyGroupForPendingApprovalOppty</fullName>
        <active>true</active>
        <description>This validation will lock the deal-opportunity grouping record if opportunity is pending for approval or closed.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name, 
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos;
), 
OR( 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G2 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G3 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G4 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G5 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G6 Approval&apos;))
)</errorConditionFormula>
        <errorMessage>Since Opportunity record is Locked, no operations allowed on related Deal-Opportunity Grouping records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictMasterOpptyForSimpleDeal</fullName>
        <active>true</active>
        <description>Req. 5127 : Restrict the option to select &quot;Master&quot; as &quot;Opportunity Relation&quot; for simple deals.</description>
        <errorConditionFormula>AND( 
$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name,
ISPICKVAL(Opportunity_Relation__c,&apos;Master&apos;),
 Deal__r.RecordType.DeveloperName = &apos;Simple_Deal&apos;
)</errorConditionFormula>
        <errorDisplayField>Opportunity_Relation__c</errorDisplayField>
        <errorMessage>Simple deals cannot have master opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictUpsellOpptyAsMasterOpptyToDeal</fullName>
        <active>true</active>
        <description>Restrict the option to associate Upsell Opportunities as Master Opportunities to a Deal.</description>
        <errorConditionFormula>AND( 
$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name, 
ISPICKVAL(Opportunity_Relation__c,&apos;Master&apos;),
ISPICKVAL(Opportunity__r.Business_Type__c,&apos;Committed Upsell&apos;)
)</errorConditionFormula>
        <errorMessage>Committed upsell opportunities cannot be master opportunities. Please select &apos;Subordinate&apos; or associate a standard opportunity.</errorMessage>
    </validationRules>
</CustomObject>