src/objects/Opportunity_Group__c/validationRules/LockOpptyGroupForPendingApprovalOppty.validationRule-meta.xml
<ValidationRule>
    <fullName>LockOpptyGroupForPendingApprovalOppty</fullName>
    <active>true</active>
    <description>This validation will lock the deal-opportunity grouping record if opportunity is pending for approval or closed.</description>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name, 
OR( 
Opportunity__r.RecordType.DeveloperName == &apos;Direct_Record_Type&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Indirect_Record_Type&apos;,
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only&apos;, 
Opportunity__r.RecordType.DeveloperName == &apos;Read_Only_Indirect&apos;
), 
OR( 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G2 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G3 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G4 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G5 Approval&apos;), 
ISPICKVAL(Opportunity__r.Phase_Status__c , &apos;Submitted for G6 Approval&apos;))
)</errorConditionFormula>
    <errorMessage>Since Opportunity record is Locked, no operations allowed on related Deal-Opportunity Grouping records.</errorMessage>
</ValidationRule>