src/objects/Opportunity_Group__c/validationRules/RestrictUpsellOpptyAsMasterOpptyToDeal.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictUpsellOpptyAsMasterOpptyToDeal</fullName>
    <active>true</active>
    <description>Restrict the option to associate Upsell Opportunities as Master Opportunities to a Deal.</description>
    <errorConditionFormula>AND( 
$Profile.Name&lt;&gt;$Label.Data_Loader_Profile_Name, 
ISPICKVAL(Opportunity_Relation__c,&apos;Master&apos;),
ISPICKVAL(Opportunity__r.Business_Type__c,&apos;Committed Upsell&apos;),
NOT(Deal__r.RecordType.Name = &apos;Framed Deal&apos;)
)</errorConditionFormula>
    <errorMessage>Committed upsell opportunities cannot be assigned to an Upsell Deal with a master relation. Please select &apos;Subordinate&apos; or associate a standard opportunity.</errorMessage>
</ValidationRule>